# greek-internet-quality

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yaml  daily_pipeline.yml  monthly_pipeline.yml  render-architecture-diagram.yml
dashboard/: app.py  data.py  figures.py
docs/: architecture.d2
infrastructure/: compute.tf  github.tf  iam.tf  main.tf  outputs.tf  providers.tf  ssss  storage.tf  variables.tf
ingest/: pyproject.toml
ingest/src/: clients.py  config.py  main.py  processing.py
ingest/tests/: conftest.py  test_clients.py  test_main.py  test_processing.py
transform/: Dockerfile
transform/src/: config.py  main.py  session.py
transform/src/transformations/: gold.py  silver.py
