[project]
name = "ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-cloud-storage>=3.9.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "tenacity>=9.1.4",
    "typer>=0.23.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

